# cdk_playground

./: README.md
app2/: BUILD.bazel  cdk.json  conftest.py  ephemeral-stack-config.yaml  guest360.ini  guest360.py  requirements.txt
app2/analytics_engineering/: Dockerfile  Dockerfile.dockerignore  Dockerfile.production  docker-compose.yml  requirements.txt
app2/analytics_engineering/production/: entry_point.sh
app2/analytics_engineering/shell/: entrypoint.sh
app2/analytics_engineering/shell/post/: synthetic_alias_generation.sh
app2/asyncapi/: test.yml
app2/configs/: constants.yaml  latest-environment.yaml  latest-infra-feature-flags.yaml  load-environment.yaml  load-infra-feature-flags.yaml  local-environment.yaml  local-infra-feature-flags.yaml  prod-environment.yaml  prod-infra-feature-flags.yaml  stage-environment.yaml  stage-infra-feature-flags.yaml  test-latest-environment.yaml  test-load-environment.yaml  test-local-environment.yaml  test-prod-environment.yaml  test-stage-environment.yaml
app2/configs/constructs/: kms_key_v2.yaml
app2/guest360_aspects/: BUILD.bazel  guest360_cw_alarms.py  guest360_nagpack.py  guest360_tagging.py  guest360_termination.py
app2/guest360_aspects/rules/: rule_base.py
app2/guest360_aspects/rules/ec2/: security_group_contiguous_port_rule.py
app2/guest360_aspects/rules/iam/: vpc_origin_rule.py
app2/guest360_aspects/tests/: test_guest360_private_hosted_zone.py  test_guest360_security_groups.py  test_guest360_termination.py  test_iam_role_vpc_origin.py
app2/guest360_constructs/: BUILD.bazel  README.md  alarm_utils.py  api_gateway.py  app_config.py  app_config_base.py  appflow_custom_registration.py  cloudwatch_alarm.py  construct_360.py  coverage_construct.py  dynamodb_globaltable.py  ecr_repository.py  ecs.py  ecs_consumer.py  event_bridge_pipes.py  glue.py  iam_role.py  interface_vpc_endpoint.py  kinesis_datastream.py  kinesis_datastream_processor.py  kinesis_firehose.py  kms_key.py  kms_key_v2.py  lambda_function.py  lambda_layer_construct.py  rds_instance.py  route53_domain_record_types.py  route53_private_hosted_zone.py  route53_resolver_endpoint.py  s3_bucket.py  security_group.py  service_discovery_namespace.py  sns_topic.py  sqs_queue.py  state_machine.py  vpc_endpoint_service.py
app2/guest360_constructs/bootcamp/: kinesis_construct.py
app2/guest360_constructs/data_service/: BUILD.bazel  api_gateway.py  api_gateway_lambda.py  experience_api.py  msk.py
app2/guest360_constructs/enums/: cloudwatch_statistics.py  event_bridge_pipe_states.py
app2/guest360_constructs/identity/: BUILD.bazel  identity_graph.py  keyring_table.py
app2/guest360_constructs/infrastructure/: dms_infra_roles.py  github_runner.py  log_aggregator.py
app2/guest360_constructs/ingestion/: BUILD.bazel  data_contract_automater.py  data_pipeline_dashboard.py  dms_ingest_event_pipe.py  kinesis_construct.py  kinesis_event_pipe.py  lambda_shredder_construct.py  messaging_ingest.py  utils.py
app2/guest360_constructs/load_testing/: BUILD.bazel  load_testing_dms.py  load_testing_rds.py
app2/guest360_constructs/processing/: BUILD.bazel  analytics_datalake.py  dynamodb_kinesis.py  processing_firehose.py  source_lightning_lane.py
app2/guest360_constructs/tests/: test_api_gateway.py  test_app_config.py  test_check_coverage_construct.py  test_cloudwatch_alarm.py  test_construct_360.py  test_dns_resolver.py  test_dynamodb_globaltable.py  test_ecr_repository.py  test_ecs.py  test_ecs_consumer.py  test_event_bridge_pipes.py  test_glue.py  test_iam_role.py  test_interface_vpc_endpoint.py  test_kinesis_datastream.py  test_kinesis_firehose.py  test_kms_key.py  test_kms_key_v2.py  test_lambda_function.py  test_lambda_layer.py  test_rds_instance.py  test_route53_domain_record_types.py  test_route53_private_hosted_zone.py  test_route53_resolver_endpoint.py  test_s3_bucket.py  test_security_group.py  test_service_discovery_namespace.py  test_sns_topic.py  test_sqs_queue.py  test_state_machine.py  test_vpc_endpoint_service.py  utils.py
app2/guest360_docker/: BUILD.bazel
app2/guest360_docker/analytics_engineering/: images_config.yaml
app2/guest360_docker/infrastructure/: base_image.Dockerfile  images_config.yaml
app2/guest360_docker/ingestion/: images_config.yaml
app2/guest360_docker/load_testing/: docker-compose.yaml  images_config.yaml
app2/guest360_docker/otel/: collector-config.yaml  images_config.yaml  otel_sidecar.Dockerfile
app2/infrastructure/: BUILD.bazel  infrastructure.py  utils.py  workstream_stack.py
app2/infrastructure/data_contract_automater/: __init__.py  data_contract_automater.py
app2/infrastructure/data_service/: data_service.py  kinesis_consumers.py  kinesis_consumers_roles.py
app2/infrastructure/identity/: identity.py
app2/infrastructure/ingestion/: BUILD.bazel  dms_certs.py  ingestion.py  ingestion_dms.py  ingestion_dms_task_manager.py  kinesis.py  messaging.py
app2/infrastructure/load_testing/: BUILD.bazel
app2/infrastructure/onboarding_bootcamp/: onboarding_bootcamp.py
app2/infrastructure/pipeline/: guest360_docker.py  guest360_pipeline.py  guest360_stack.py  guest360_stage.py
app2/infrastructure/processing/: processing.py
app2/infrastructure/reliability/: chatbot.py  enable_stack.py
app2/infrastructure/snowflake/: snowflake_networking.py
app2/infrastructure/tests/: test_infrastructure.py
app2/src/: BUILD.bazel  otel-config.yaml
app2/src/bootcamp/: kinesis_data_generator.py
app2/src/core/: BUILD.bazel  __init__.py  exceptions.py  processing_objects.py
app2/src/data_service/: BUILD.bazel
app2/src/data_structures/: BUILD.bazel
app2/src/ingestion/: BUILD.bazel
app2/src/ingestion/appflow/: BUILD.bazel
app2/src/load_testing/: BUILD.bazel  Dockerfile  docker-compose.yml  requirements.txt
app2/src/processing/: BUILD.bazel
app2/src/reliability/: BUILD.bazel  utils.py
app2/src/utils/: BUILD.bazel
app2/tests/unit_tests/: test_guest360_app.py
app2/tools/pytest/: .pylintrc  BUILD.bazel  defs.bzl  pytest_wrapper.py
app2/tools/test_data/: BUILD.bazel  gam_raw.py  lightning_lane_raw_events.py
(+3485 files in other folders)
