load("@external_python_packages//:requirements.bzl", "requirement")
load("//app/tools/macros/py_lambda_library:def.bzl", "py_lambda_library")
load("//app/tools/pytest:defs.bzl", "pytest_test")

py_lambda_library(
    name = "guest360_constructs",
    srcs = glob(
        [
            "*.py",
            "load_testing/*.py",
            "load_testing/**/*.py",
            "dms/*.py",
            "enums/*.py",
        ],
    ),
    data = ["//app/src:missing_init_files"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("aws-cdk-lib"),
        requirement("strongtyping"),
    ],
)

filegroup(
    name = "common",
    srcs = glob(
        [
            "**/*",
        ],
    ),
    visibility = ["//visibility:public"],
)
filegroup(
    name = "test_ecs",
    srcs = glob([
        "tests/test_ecs/*",
        "test_ecs/*",
    ]),
    visibility = ["//visibility:public"],
)

pytest_test(
    name = "test_guest360_constructs",
    srcs = glob(
        [
            "tests/**/*.py",
            "tests/*.py",
        ],
    ),
    data = [
        "//:openapi",
        "//app:app_level_conftest_file",
        "//app:common",
        "//app:environment_infra_feature_flags",
        ":test_ecs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":guest360_constructs",
        "//app/src/reliability",
        "//app/src/utils/feature_flag",
        "//test_helpers",
        requirement("cdk-nag"),
        requirement("pyyaml"),
        requirement("moto"),
        requirement("mock"),
        requirement("boto3"),
        requirement("botocore"),
        requirement("pytest-timeout"),
    ],
)
