# couldn't figure out all the dependency issues
load("@external_python_packages//:requirements.bzl", "requirement")
load("//app/tools/macros/py_lambda_library:def.bzl", "py_lambda_library")

library_name = "data_service"

py_lambda_library(
    name = library_name,
    data = [
        "__init__.py",
        "//app/guest360_constructs:common",
        "//app/src:missing_init_files",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("aws-cdk-lib"),
    ],
)
