load("@external_python_packages//:requirements.bzl", "requirement")
load("//app/tools/pytest:defs.bzl", "pytest_test")
load("//app/tools/macros/py_lambda_library:def.bzl", "py_lambda_library")

py_lambda_library(
    name = "core",
    data = [
        "__init__.py",
        "exceptions.py",
        "processing_objects.py",
        "//app/src:missing_init_files",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("dataclasses-json"),
        requirement("networkx"),
    ],
)

#using pytest
pytest_test(
    name = "test_core",
    srcs = glob([
        "tests/*.py",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//app/src/core",
        requirement("networkx"),
    ],
)
