load("@external_python_packages//:requirements.bzl", "requirement")
load("//app/tools/macros/py_lambda_library:def.bzl", "py_lambda_library")

py_lambda_library(
    name = "object_lookup",
    srcs = glob(["*.py"]),
    data = [
        "__init__.py",
        "//app/src/data_structures",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//app/src/data_structures/events",
        "//app/src/data_structures/profiles",
        requirement("boto3"),
        requirement("opentelemetry-sdk-extension-aws"),
        requirement("opentelemetry-propagator-aws-xray"),
        requirement("aws-lambda-powertools"),
    ],
)
